style: update styles to prevent component overlap with mobile navigation

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -89,8 +89,20 @@
   }
 }
 @media screen and (max-width: 500px) {
+  .header__title {
+    font-size: 14px;
+  }
   .header__navbar {
     flex-direction: column;
     align-items: flex-end;
+  }
+}
+@media screen and (max-width: 375px) {
+  .header__links_mobile {
+    align-items: flex-start;
+    left: 0; 
+  }
+  .header__menu-button {
+    align-self: flex-start;
   }
 }
