--- a/src/components/Main/Gallery/Gallery.css
+++ b/src/components/Main/Gallery/Gallery.css
@@ -1,8 +1,16 @@
 .gallery {
-  padding-top: 50px;
+  padding-top: 80px;
   max-width: 880px;
   min-height: 372px;
   margin: 0 auto;
+}
+.gallery__message {
+  font-family: "Agrandir Grand Light", Arial, sans-serif;
+  font-size: 24px;
+  line-height: 1.22;
+  border-top: 1px solid #fff;
+  margin: 0;
+  padding-top: 32px;
 }
 .gallery__cards {
   display: grid;
@@ -57,7 +65,6 @@
 
 @media screen and (max-width: 1024px) {
   .gallery {
-    padding-top: 45px;
     width: 80vw;
   }
   .gallery__cards {
@@ -72,8 +79,8 @@
 }
 
 @media screen and (max-width: 720px) {
-  .gallery {
-    padding-top: 36px;
+  .gallery__message {
+    font-size: 20px;
   }
   .gallery__cards {
     grid-template-columns: repeat(1, 1fr);
