--- a/src/components/Main/RegisterForm/RegisterForm.css
+++ b/src/components/Main/RegisterForm/RegisterForm.css
@@ -1,6 +1,6 @@
 .form {
   max-width: 358px;
-  padding: 32px 0 60px;
+  padding: 80px 0 60px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
